Layout.tag, częściowa implementacja kontrolera albumu

--- a/src/main/resources/validation_pl.properties
+++ b/src/main/resources/validation_pl.properties
@@ -3,5 +3,5 @@ Size.userForm.username=Username must be between 8 and 32 characters.
 Duplicate.userForm.username=Such username already exists.
 Size.userForm.password=Password must be over 8 characters.
 Different.userForm.password=Password don't match.
-Size.albumForm.name=Name must be between 3 and 255 characters
-Duplicate.albumForm.name=Album already exists
+Size.albumForm.name=Nazwa musi by\u0107 d\u0142u\u017csza ni\u017c 3 i kr\u00f3tsza ni\u017c 255 znak\u00f3w
+Duplicate.albumForm.name=Album o takiej nazwie ju\u017c istnieje
