--- a/src/main/resources/validation_pl.properties
+++ b/src/main/resources/validation_pl.properties
@@ -5,3 +5,4 @@ Size.userForm.password=Password must be over 8 characters.
 Different.userForm.password=Password don't match.
 Size.albumForm.name=Nazwa musi by\u0107 d\u0142u\u017csza ni\u017c 3 i kr\u00f3tsza ni\u017c 255 znak\u00f3w
 Duplicate.albumForm.name=Album o takiej nazwie ju\u017c istnieje
+Value.scoreForm.incorrectRange=Score should be value between 0 and 10
