Comments and scores

--- a/src/main/resources/validation_pl.properties
+++ b/src/main/resources/validation_pl.properties
@@ -6,3 +6,4 @@ Different.userForm.password=Password don't match.
 Size.albumForm.name=Nazwa musi by\u0107 d\u0142u\u017csza ni\u017c 3 i kr\u00f3tsza ni\u017c 255 znak\u00f3w
 Duplicate.albumForm.name=Album o takiej nazwie ju\u017c istnieje
 Value.scoreForm.incorrectRange=Score should be value between 0 and 10
+Description.commentForm.tooShort=Your comment should be longer than 10 characters
