--- a/src/main/resources/validation_pl.properties
+++ b/src/main/resources/validation_pl.properties
@@ -7,3 +7,6 @@ Size.albumForm.name=Nazwa musi by\u0107 d\u0142u\u017csza ni\u017c 3 i kr\u00f3t
 Duplicate.albumForm.name=Album o takiej nazwie ju\u017c istnieje
 Value.scoreForm.incorrectRange=Score should be value between 0 and 10
 Description.commentForm.tooShort=Your comment should be longer than 10 characters
+PhotoFile.pictureForm.Empty=You have to choose a photo
+PhotoFile.pictureForm.Size=File is too large
+PhotoFile.pictureForm.Type=This file format is not supported, upload JPEG or PNG file
