Multiple comments, scores and comments in album view

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -15,7 +15,7 @@ word.photo.lowercase=photo
 word.photo.uppercase=Photo
 view.album.userAlbum={0}''s album
 view.album.rateAlbum=Rate this album
-view.album.userAlbums=User''s albums
+view.album.userAlbums=User's albums
 view.album.zeroAlbums=User has not created any album yet
 view.album.form.label.create=Create album
 view.album.form.label.edit=Edit album
@@ -56,6 +56,7 @@ messages.picture.notFound=Photo not found
 messages.picture.create.success=Successfully added photo to album
 messages.picture.edit.success=Successfully edited photo
 messages.picture.delete.success=Successfully removed photo
+messages.comment.notFound=Comment not found
 messages.comment.create.success=Successfully created comment
 messages.comment.edit.success=Successfully edited comment
 messages.comment.delete.success=Successfully deleted comment
