--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -34,6 +34,7 @@ view.comment.form.placeholder=Tre\u015B\u0107 komentarza
 view.main.welcome=Witaj
 view.main.chooseLanguage=Wybierz j\u0119zyk:
 view.search.title=Wyniki wyszukiwania
+view.search.advanced.title=Wyszukiwanie zaawansowane
 view.search.table.username=Nazwa u\u017Cytkownika
 view.search.table.name=Imi\u0119
 view.search.table.surname=Nazwisko
@@ -56,6 +57,7 @@ messages.picture.notFound=Nie znaleziono zdj\u0119cia
 messages.picture.create.success=Pomy\u015Blnie dodano zdj\u0119cie do albumu
 messages.picture.edit.success=Pomy\u015Blnie edytowano zdj\u0119cie
 messages.picture.delete.success=Pomy\u015Blnie usuni\u0119to zdj\u0119cie
+messages.comment.notFound=Nie znaleziono komentarza
 messages.comment.create.success=Pomy\u015Blnie dodano komentarz
 messages.comment.edit.success=Pomy\u015Blnie edytowano komentarz
 messages.comment.delete.success=Pomy\u015Blnie usuni\u0119to komentarz
