--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -34,6 +34,7 @@ view.comment.form.placeholder=Comment contents
 view.main.welcome=Welcome
 view.main.chooseLanguage=Choose your language:
 view.search.title=Search results
+view.search.advanced.title=Advanced search
 view.search.table.username=Username
 view.search.table.name=Name
 view.search.table.surname=Surname
