Zamówienia: create, view, list

--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -3,6 +3,7 @@ label.edit=Edytuj
 label.create=Utw\u00F3rz
 label.add=Dodaj
 label.submit=Wy\u015Blij
+label.view=Wy\u015Bwietl
 label.comments=Komentarze:
 label.name=Nazwa
 label.description=Opis
@@ -39,15 +40,25 @@ view.search.table.username=Nazwa u\u017Cytkownika
 view.search.table.name=Imi\u0119
 view.search.table.surname=Nazwisko
 view.search.table.city=Miejscowo\u015B\u0107
+view.order.form.label=Formularz zam\u00F3wienia
+view.order.form.description.placeholder=Dodatkowe informacje o zam\u00F3wieniu
+view.order.list.label=Lista zam\u00F3wie\u0144
+view.order.table.photographer=Fotograf
+view.order.table.client=Klient
+view.order.table.orderCompletionDate=Data wykonania zam\u00F3wienia
+view.order.table.orderDate=Data zam\u00F3wienia
+view.order.table.status=Status
+view.order.table.options=Opcje
 layout.navbar.login=Login
 layout.navbar.logout=Logout
 layout.navbar.register=Rejestracja
 layout.navbar.myAlbums=Moje albumy
+layout.navbar.myOrders=Moje zam\u00F3wienia
 layout.navbar.createAlbum=Utw\u00F3rz album
 layout.navbar.welcomeUser=Witaj, {0}
 layout.navbar.searchBar=Szukaj
 flash.success=Sukces!
-flash.error=B\u0142¹d!
+flash.error=B\u0142\u0105d!
 flash.info=Info!
 messages.album.notFound=Nie znaleziono albumu
 messages.album.create.success=Pomy\u015Blnie utworzono nowy album
@@ -63,3 +74,10 @@ messages.comment.edit.success=Pomy\u015Blnie edytowano komentarz
 messages.comment.delete.success=Pomy\u015Blnie usuni\u0119to komentarz
 messages.score.create.success=Pomy\u015Blnie dodano ocen\u0119 do albumu
 messages.score.edit.success=Pomy\u015Blnie edytowano ocen\u0119 albumu
+messages.user.notFound=Nie znaleziono u\u017Cytkownika
+messages.order.notFound=Nie znaleziono zam\u00F3wienia
+messages.order.create.success=Pomy\u015Blnie z\u0142o\u017Cono zam\u00F3wienie
+messages.order.delete.success=Pomy\u015Blnie usuni\u0119to zam\u00F3wienie
+messages.order.accept=Status zam\u00F3wienia zmieni\u0142 si\u0119 na "Zaakceptowane"
+messages.order.reject=Status zam\u00F3wienia zmieni\u0142 si\u0119 na "Odrzucone"
+messages.order.change=Pomy\u015Blnie zmodyfikowano zam\u00F3wienie. Klient zostanie poproszony o akceptacj\u0119 zmian.
