--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -3,6 +3,7 @@ label.edit=Edit
 label.create=Create
 label.add=Add
 label.submit=Submit
+label.view=View
 label.comments=Comments:
 label.name=Name
 label.description=Description
@@ -39,10 +40,20 @@ view.search.table.username=Username
 view.search.table.name=Name
 view.search.table.surname=Surname
 view.search.table.city=City
+view.order.form.label=Order form
+view.order.form.description.placeholder=Additional info about order
+view.order.list.label=Order list
+view.order.table.photographer=Photographer
+view.order.table.client=Client
+view.order.table.orderCompletionDate=Order completion date
+view.order.table.orderDate=Order date
+view.order.table.status=Status
+view.order.table.options=Options
 layout.navbar.login=Login
 layout.navbar.logout=Logout
 layout.navbar.register=Register
 layout.navbar.myAlbums=My albums
+layout.navbar.myOrders=My orders
 layout.navbar.createAlbum=Create album
 layout.navbar.welcomeUser=Welcome, {0}
 layout.navbar.searchBar=Search
@@ -63,3 +74,10 @@ messages.comment.edit.success=Successfully edited comment
 messages.comment.delete.success=Successfully deleted comment
 messages.score.create.success=Successfully rated an album
 messages.score.edit.success=Successfully edited a score
+messages.user.notFound=User not found
+messages.order.notFound=Order not found
+messages.order.create.success=Successfully made an order
+messages.order.delete.success=Successfully deleted order
+messages.order.accept=Successfully changed an order status to "Accepted"
+messages.order.reject=Successfully changed an order status to "Rejected"
+messages.order.change=Successfully changed an order. Client will be asked to accept the change.
