Zamówienia : delete, edit, change status; Polskie znaki w bazie danych

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -3,6 +3,9 @@ label.edit=Edit
 label.create=Create
 label.add=Add
 label.submit=Submit
+label.accept=Accept
+label.reject=Reject
+label.Modify=Modify
 label.view=View
 label.comments=Comments:
 label.name=Name
@@ -10,6 +13,11 @@ label.description=Description
 label.options=Options
 label.content=Content
 label.author=Author
+status.created=Created
+status.modified=Modified
+status.accepted=Accepted
+status.rejected=Rejected
+status.unknown=Unknown
 word.album.lowercase=album
 word.album.uppercase=Album
 word.photo.lowercase=photo
@@ -49,6 +57,8 @@ view.order.table.orderCompletionDate=Order completion date
 view.order.table.orderDate=Order date
 view.order.table.status=Status
 view.order.table.options=Options
+view.order.wait.userApproval=Wait for client's approval
+view.order.wait.photographerApproval=Wait for photographer's approval
 layout.navbar.login=Login
 layout.navbar.logout=Logout
 layout.navbar.register=Register
