--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -3,6 +3,9 @@ label.edit=Edytuj
 label.create=Utw\u00F3rz
 label.add=Dodaj
 label.submit=Wy\u015Blij
+label.accept=Akceptuj
+label.reject=Odrzu\u0107
+label.Modify=Modyfikuj
 label.view=Wy\u015Bwietl
 label.comments=Komentarze:
 label.name=Nazwa
@@ -10,6 +13,11 @@ label.description=Opis
 label.options=Opcje
 label.content=Tre\u015B\u0107
 label.author=Autor
+status.created=Utworzono
+status.modified=Zmodyfikowano
+status.accepted=Zaakceptowano
+status.rejected=Odrzucono
+status.unknown=Status nieznany
 word.album.lowercase=album
 word.album.uppercase=Album
 word.photo.lowercase=zdj\u0119cie
@@ -49,6 +57,8 @@ view.order.table.orderCompletionDate=Data wykonania zam\u00F3wienia
 view.order.table.orderDate=Data zam\u00F3wienia
 view.order.table.status=Status
 view.order.table.options=Opcje
+view.order.wait.userApproval=Poczekaj na zaakceptowanie zmian przez klienta
+view.order.wait.photographerApproval=Poczekaj na zaakceptowanie zam\u00F3wienia przez fotografa
 layout.navbar.login=Login
 layout.navbar.logout=Logout
 layout.navbar.register=Rejestracja
