Order status change notifications on email

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -91,3 +91,11 @@ messages.order.delete.success=Successfully deleted order
 messages.order.accept=Successfully changed an order status to "Accepted"
 messages.order.reject=Successfully changed an order status to "Rejected"
 messages.order.change=Successfully changed an order. Client will be asked to accept the change.
+mail.subject.statusChanged=Order status changed
+mail.subject.orderCreated=Order created
+mail.content.client.orderCreated=Hello {0}! \n  Your order has been successfully created. Now you have to wait for photographer to accept it. \n You can check order status on your Orders page. You will also be informed about status changes in another mail.
+mail.content.photographer.orderCreated=Hello {0}! \n You have a new order waiting in your Orders page.
+mail.content.client.statusChange=Hello {0}! \n Your order status has changed to "{1}". You can check order details on your Orders page.
+mail.content.photographer.statusChange=Hello {0}! \n Order status has changed to "{1}". You can check order details on your Orders page.
+mail.content.client.statusChange.modified=Hello {0}! \n Your order has been modified. Accept or reject the changes on your Orders page.
+mail.content.photographer.statusChange.modified=Hello {0}! \n You have successfully modified order. Wait for your client to accept or reject changes.
