--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -91,3 +91,11 @@ messages.order.delete.success=Pomy\u015Blnie usuni\u0119to zam\u00F3wienie
 messages.order.accept=Status zam\u00F3wienia zmieni\u0142 si\u0119 na "Zaakceptowane"
 messages.order.reject=Status zam\u00F3wienia zmieni\u0142 si\u0119 na "Odrzucone"
 messages.order.change=Pomy\u015Blnie zmodyfikowano zam\u00F3wienie. Klient zostanie poproszony o akceptacj\u0119 zmian.
+mail.subject.statusChanged=Zmieniono status zam\u00F3wienia
+mail.subject.orderCreated=Utworzono zam\u00F3wienie
+mail.content.client.orderCreated=Witaj {0}! \n Twoje zam\u00F3wienie zosta\u0142o utworzone pomy\u015Blnie. Teraz musisz poczeka\u0107 a\u017C zaakceptuje je fotograf. \n Mo\u017Cesz \u015Bledzi\u0107 status zam\u00F3wienia w zak\u0142adce Moje zam\u00F3wienia. O zmianie statusu zostaniesz r\u00F3wnie\u017C poinformowany mailem.
+mail.content.photographer.orderCreated=Witaj {0}! \n W zak\u0142adce Moje zam\u00F3wienia czeka na Ciebie nowe zam\u00F3wienie.
+mail.content.client.statusChange=Witaj {0}! \n Twoje zam\u00F3wienie zmieni\u0142o status na "{1}". Mo\u017Cesz sprawdzi\u0107 szczeg\u00F3\u0142y zam\u00F3wienia w zak\u0142adce Moje zam\u00F3wienia.
+mail.content.photographer.statusChange=Witaj {0}! \n Zam\u00F3wienie zmieni\u0142o status na "{1}". Mo\u017Cesz sprawdzi\u0107 szczeg\u00F3\u0142y zam\u00F3wienia w zak\u0142adce Moje zam\u00F3wienia.
+mail.content.client.statusChange.modified=Witaj {0}! \n Twoje zam\u00F3wienie zosta\u0142o zmodyfikowane przez fotografa. Zaakceptuj lub odrzu\u0107 zmiany w zak\u0142adce Moje zam\u00F3wienia.
+mail.content.photographer.statusChange.modified=Witaj {0}! \n Pomy\u015Blnie zmodyfikowa\u0142e\u015B zam\u00F3wienie. Poczekaj a\u017C zmiany zostan¹ zaakceptowane lub odrzucone przez klienta.
