--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -99,3 +99,11 @@ mail.content.client.statusChange=Hello {0}! \n Your order status has changed to 
 mail.content.photographer.statusChange=Hello {0}! \n Order status has changed to "{1}". You can check order details on your Orders page.
 mail.content.client.statusChange.modified=Hello {0}! \n Your order has been modified. Accept or reject the changes on your Orders page.
 mail.content.photographer.statusChange.modified=Hello {0}! \n You have successfully modified order. Wait for your client to accept or reject changes.
+modal.delete.header=Delete confirmation
+modal.delete.content=Do you really want to delete this element?
+modal.delete.option.yes=Yes
+modal.delete.option.no=No
+modal.delete.type.comment=comment
+modal.delete.type.album=album
+modal.delete.type.photo=photo
+modal.delete.type.order=order
