--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -98,4 +98,12 @@ mail.content.photographer.orderCreated=Witaj {0}! \n W zak\u0142adce Moje zam\u0
 mail.content.client.statusChange=Witaj {0}! \n Twoje zam\u00F3wienie zmieni\u0142o status na "{1}". Mo\u017Cesz sprawdzi\u0107 szczeg\u00F3\u0142y zam\u00F3wienia w zak\u0142adce Moje zam\u00F3wienia.
 mail.content.photographer.statusChange=Witaj {0}! \n Zam\u00F3wienie zmieni\u0142o status na "{1}". Mo\u017Cesz sprawdzi\u0107 szczeg\u00F3\u0142y zam\u00F3wienia w zak\u0142adce Moje zam\u00F3wienia.
 mail.content.client.statusChange.modified=Witaj {0}! \n Twoje zam\u00F3wienie zosta\u0142o zmodyfikowane przez fotografa. Zaakceptuj lub odrzu\u0107 zmiany w zak\u0142adce Moje zam\u00F3wienia.
-mail.content.photographer.statusChange.modified=Witaj {0}! \n Pomy\u015Blnie zmodyfikowa\u0142e\u015B zam\u00F3wienie. Poczekaj a\u017C zmiany zostan¹ zaakceptowane lub odrzucone przez klienta.
+mail.content.photographer.statusChange.modified=Witaj {0}! \n Pomy\u015Blnie zmodyfikowa\u0142e\u015B zam\u00F3wienie. Poczekaj a\u017C zmiany zostan\u0105 zaakceptowane lub odrzucone przez klienta.
+modal.delete.header=Potwierdzenie usuni\u0119cia
+modal.delete.content=Czy napewno chcesz usun\u0105\u0107 ten element?
+modal.delete.option.yes=Tak
+modal.delete.option.no=Nie
+modal.delete.type.comment=ten komentarz
+modal.delete.type.album=ten album
+modal.delete.type.photo=to zdj\u0119cie
+modal.delete.type.order=to zam\u00F3wienie
