Top albums on main page

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -42,6 +42,7 @@ view.comment.form.label=Add comment
 view.comment.form.placeholder=Comment contents
 view.main.welcome=Welcome
 view.main.chooseLanguage=Choose your language:
+view.main.bestAlbums.label=Best albums:
 view.search.title=Search results
 view.search.advanced.title=Advanced search
 view.search.table.username=Username
