--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -42,6 +42,7 @@ view.comment.form.label=Dodaj komentarz
 view.comment.form.placeholder=Tre\u015B\u0107 komentarza
 view.main.welcome=Witaj
 view.main.chooseLanguage=Wybierz j\u0119zyk:
+view.main.bestAlbums.label=Najlepsze albumy:
 view.search.title=Wyniki wyszukiwania
 view.search.advanced.title=Wyszukiwanie zaawansowane
 view.search.table.username=Nazwa u\u017Cytkownika
