ExceptionHandler, Security po rolach, Komentarze - security po autorstwie

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -92,6 +92,8 @@ messages.order.delete.success=Successfully deleted order
 messages.order.accept=Successfully changed an order status to "Accepted"
 messages.order.reject=Successfully changed an order status to "Rejected"
 messages.order.change=Successfully changed an order. Client will be asked to accept the change.
+messages.accessDenied=Access denied!
+messages.notFound=Object not found!
 mail.subject.statusChanged=Order status changed
 mail.subject.orderCreated=Order created
 mail.content.client.orderCreated=Hello {0}! \n  Your order has been successfully created. Now you have to wait for photographer to accept it. \n You can check order status on your Orders page. You will also be informed about status changes in another mail.
