--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -92,6 +92,9 @@ messages.order.delete.success=Pomy\u015Blnie usuni\u0119to zam\u00F3wienie
 messages.order.accept=Status zam\u00F3wienia zmieni\u0142 si\u0119 na "Zaakceptowane"
 messages.order.reject=Status zam\u00F3wienia zmieni\u0142 si\u0119 na "Odrzucone"
 messages.order.change=Pomy\u015Blnie zmodyfikowano zam\u00F3wienie. Klient zostanie poproszony o akceptacj\u0119 zmian.
+messages.accessDenied=Brak dost\u0119pu!
+messages.notFound=Nie znaleziono obiektu!
+messages.searchError=B\u0142\u0105d wyszukiwarki
 mail.subject.statusChanged=Zmieniono status zam\u00F3wienia
 mail.subject.orderCreated=Utworzono zam\u00F3wienie
 mail.content.client.orderCreated=Witaj {0}! \n Twoje zam\u00F3wienie zosta\u0142o utworzone pomy\u015Blnie. Teraz musisz poczeka\u0107 a\u017C zaakceptuje je fotograf. \n Mo\u017Cesz \u015Bledzi\u0107 status zam\u00F3wienia w zak\u0142adce Moje zam\u00F3wienia. O zmianie statusu zostaniesz r\u00F3wnie\u017C poinformowany mailem.
