user profile modify

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -13,6 +13,10 @@ label.description=Description
 label.options=Options
 label.content=Content
 label.author=Author
+label.order=Order
+label.changePassword=Change password
+label.accountDetails.edit=Edit account details
+label.setAvatar=Set avatar
 status.created=Created
 status.modified=Modified
 status.accepted=Accepted
@@ -25,7 +29,7 @@ word.photo.uppercase=Photo
 view.album.userAlbum={0}''s album
 view.album.rateAlbum=Rate this album
 view.album.userAlbums=User's albums
-view.album.zeroAlbums=User has not created any album yet.
+view.album.zeroAlbums=User has not created any album yet
 view.album.form.label.create=Create album
 view.album.form.label.edit=Edit album
 view.album.form.name=Album name
