--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -13,6 +13,10 @@ label.description=Opis
 label.options=Opcje
 label.content=Tre\u015B\u0107
 label.author=Autor
+label.order=Zam\u00F3w
+label.changePassword=Zmie\u0144 has\u0142o
+label.accountDetails.edit=Edytuj dane kontaktowe
+label.setAvatar=Ustaw avatar
 status.created=Utworzono
 status.modified=Zmodyfikowano
 status.accepted=Zaakceptowano
@@ -25,7 +29,7 @@ word.photo.uppercase=Zdj\u0119cie
 view.album.userAlbum=Album u\u017Cytkownika {0}
 view.album.rateAlbum=Oce\u0144 ten album
 view.album.userAlbums=Albumy u\u017Cytkownika
-view.album.zeroAlbums=U\u017Cytkownik nie utworzy\u0142 jeszcze \u017Cadnego albumu.
+view.album.zeroAlbums=U\u017Cytkownik nie utworzy\u0142 jeszcze \u017Cadnego albumu
 view.album.form.label.create=Stw\u00F3rz album
 view.album.form.label.edit=Edytuj album
 view.album.form.name=Nazwa albumu
