--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -72,6 +72,7 @@ layout.navbar.myOrders=My orders
 layout.navbar.createAlbum=Create album
 layout.navbar.welcomeUser=Welcome, {0}
 layout.navbar.searchBar=Search
+layout.navbar.usersList=Users list
 flash.success=Success!
 flash.error=Error!
 flash.info=Info!
