--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -72,6 +72,7 @@ layout.navbar.myOrders=Moje zam\u00F3wienia
 layout.navbar.createAlbum=Utw\u00F3rz album
 layout.navbar.welcomeUser=Witaj, {0}
 layout.navbar.searchBar=Szukaj
+layout.navbar.usersList=Lista u\u017Cytkownik\u00F3w
 flash.success=Sukces!
 flash.error=B\u0142\u0105d!
 flash.info=Info!
